# SemanticDocuments

./: .dir-locals.el  .gitignore  Makefile  README.md  flake.nix  pyproject.toml
nix/: devshell.nix  pdfbox.nix  pdfuaanalyze.nix  semdoc.nix  taggedpdf.nix  verapdf.nix
semdoc/: __init__.py  cache.py  cli.py  detectron2.py  document.py  logging.py  opencv.py  pipeline.py  server.py  tesseract.py  xmlrpc.py
semdoc/analyzer/: __init__.py  logicalizer.py  organizer.py  pipeline.py  sequencial.py  sequential.py  tablelizer.py
semdoc/analyzer/opencv/: analyzer.py
semdoc/analyzer/surya/: __init__.py  analyzer.py  inference.py  layout.py  lines.py  ocr.py
semdoc/analyzer/tesseract/: analyzer.py
semdoc/analyzer/tidier/: __init__.py  blockwrapper.py  heading_levels.py
semdoc/deprecated/: main.py  opencv.py  opencv2.py  tesseract.py  tktree.py  treetest.py
semdoc/document/: __init__.py  document.py  load.py  partitioning.py  region.py
semdoc/gui/: __init__.py  boxes.py
semdoc/output/: __init__.py  formatters.py  pdf.py  xml.py
semdoc/output/pdf/: document.py  formatter.py
semdoc/partitioning/: __init__.py  opencv.py
semdoc/reader/: __init__.py  bitmap.py  load.py  mupdf.py
semdoc/structure/: __init__.py  containers.py  document.py  element.py  region.py
semdoc/writer/: __init__.py  writers.py  xml.py
semdoc/writer/pdf/: __init__.py  document.py  formatter.py
tests/: documents.py  test_analyzer_opencv.py  test_analyzer_surya.py  test_analyzer_tesseract.py  test_document.py  test_integration_simple_text.py  test_load_bitmap.py  test_mupdf.py  test_opencv.py  test_output_pdf.py  test_pipeline.py  test_pipeline_processor.py  test_reader_bitmap.py  test_region.py  test_structure_region.py  test_surya.py  test_system.py  test_tesseract.py  test_tidier_heading_levels.py  test_writer_pdf.py  test_xmlrpc.py  utils.py
tests/documents/: scrlttr2.latex  simple_letter.aux  simple_letter.md  simple_letter.tex  simple_text.md
tests/helpers/: xmlrpc.py
