[tool.poetry]
name = "semdoc"
version = "0.1.0"
description = "Exract semantic information from documents"
authors = ["Michael Volz <info@michael-volz.eu>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
rich = "^13.7.1"
layoutparser = {extras = ["layoutmodels"], version = "^0.3.4"}
typer = "^0.12.1"
opencv-python = "^4.9.0.80"
torchvision = "^0.17.2"
torch = "^2.2.2"
#detectron2 = {path = "detectron2", develop = false}
pytesseract = "^0.3.10"
urwid = "^2.6.11"
seaborn = "^0.13.2"

[tool.poetry.scripts]
semdoc = "semdoc.cli:run"
semdoc_opencv = "semdoc.deprecated.opencv2:segment_image_into_blocks"
semdoc_tesseract = "semdoc.deprecated.tesseract:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.ruff]
exclude = [
    "detectron2",
]