[tool.poetry]
name = "semdoc"
version = "0.1.0"
description = "Exract semantic information from documents"
authors = ["Michael Volz <info@michael-volz.eu>"]
license = "AGPL-3.0-or-later"
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
rich = "^13.7.1"
layoutparser = {extras = ["layoutmodels"], version = "^0.3.4"}
typer = "^0.12.1"
torch = "^2.2.2"
#detectron2 = {path = "detectron2", develop = false}
pytesseract = "^0.3.10"
urwid = "^2.6.11"
seaborn = "^0.13.2"
surya-ocr = "^0.4.12"
diskcache = "^5.6.3"
pyxdg = "^0.28"
pytest-profiling = "^1.7.0"
pyside6 = "^6.7.2"
pymupdf = "^1.24.7"
python-levenshtein = "^0.25.1"

[tool.poetry.scripts]
semdoc = "semdoc.cli:run"
semdoc_opencv = "semdoc.deprecated.opencv2:segment_image_into_blocks"
semdoc_tesseract = "semdoc.deprecated.tesseract:run"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[tool.ruff]
exclude = [
    "detectron2",
]

[tool.pytest.ini_options]
filterwarnings = [
  "ignore::DeprecationWarning:pydantic",
  "ignore::FutureWarning:huggingface_hub",
]